force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ActualDischargeDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualDischargeDateTime__c</fullName>
    <label>Actual Discharge Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualDischargeDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>