force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__AorRequestedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AorRequestedDateTime__c</fullName>
    <label>Aor Requested Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AorRequestedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>