force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__AppealEffectuationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppealEffectuationDateTime__c</fullName>
    <label>Appeal Effectuation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppealEffectuationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>