force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__AppointedRepVerbalContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointedRepVerbalContactDateTime__c</fullName>
    <label>Appointed Rep Verbal Contact Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointedRepVerbalContactDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>