force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ApprovedLengthOfStayDayQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApprovedLengthOfStayDayQuantity__c</fullName>
    <label>Approved Length Of Stay Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApprovedLengthOfStayDayQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>