force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ApprovedLevelOfCare__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApprovedLevelOfCare__c</fullName>
    <label>Approved Level Of Care</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApprovedLevelOfCare</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>