force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__CareRequest_ReopenedById_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareRequest_ReopenedById_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareRequest_ReopenedById_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>CareRequest_ReopenedById_map_User_Id_N_1</relationshipLabel>
    <relationshipName>CareRequest_ReopenedById_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>