force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__CriteriaMet__c.field-meta.xml
<CustomField>
    <fullName>ssot__CriteriaMet__c</fullName>
    <label>Criteria Met</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CriteriaMet</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>