force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__DecisionReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__DecisionReason__c</fullName>
    <label>Decision Reason</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DecisionReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>