force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__DeniedLengthOfStayDayQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeniedLengthOfStayDayQuantity__c</fullName>
    <label>Denied Length Of Stay Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeniedLengthOfStayDayQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>