force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ExpirationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationDateTime__c</fullName>
    <label>Expiration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>