force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ExtensionRequestReceivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExtensionRequestReceivedDateTime__c</fullName>
    <label>Extension Request Received Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExtensionRequestReceivedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>