force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__FacilityRoomBedType__c.field-meta.xml
<CustomField>
    <fullName>ssot__FacilityRoomBedType__c</fullName>
    <label>Facility Room Bed Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FacilityRoomBedType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>