force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__GenlPrctnrWrittenNtfyDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__GenlPrctnrWrittenNtfyDateTime__c</fullName>
    <label>General Prctnr Written Ntfy Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GenlPrctnrWrittenNtfyDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>