force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__HomeHealthCertificationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__HomeHealthCertificationStartDate__c</fullName>
    <label>Home Health Certification Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HomeHealthCertificationStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>