force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__HomeHealthStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__HomeHealthStartDate__c</fullName>
    <label>Home Health Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HomeHealthStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>