force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__IndependentReviewSubmissionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndependentReviewSubmissionDateTime__c</fullName>
    <label>Independent Review Submission Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndependentReviewSubmissionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>