force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__InfoReceivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__InfoReceivedDateTime__c</fullName>
    <label>Info Received Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InfoReceivedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>