force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__InfoRequestedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__InfoRequestedDateTime__c</fullName>
    <label>Info Requested Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InfoRequestedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>