force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__IsExtendedRequest__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsExtendedRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Extended Request</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsExtendedRequest</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>