force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__IsServiceOrMedicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsServiceOrMedicationReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Or Medication Received</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsServiceOrMedicationReceived</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>