force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberContactDateTime__c</fullName>
    <label>Member Contact Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberContactDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>