force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberFirstName__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberFirstName__c</fullName>
    <label>Member First Name</label>
    <length>32</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberFirstName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>