force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberGroupNumber__c</fullName>
    <label>Member Group Number</label>
    <length>64</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberGroupNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>