force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberInsuranceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberInsuranceIdentifier__c</fullName>
    <label>Member Insurance Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberInsuranceIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>