force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberPrognosis__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberPrognosis__c</fullName>
    <label>Member Prognosis</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberPrognosis</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>