force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__MemberWrittenNotificationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberWrittenNotificationDateTime__c</fullName>
    <label>Member Written Notification Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberWrittenNotificationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>