force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ModificationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModificationDateTime__c</fullName>
    <label>Modification Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModificationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>