force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__NextReviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextReviewDateTime__c</fullName>
    <label>NextR eview Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextReviewDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>