force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__OriginalDenialMedicalDirectorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginalDenialMedicalDirectorId__c</fullName>
    <label>Original Denial Medical Director</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginalDenialMedicalDirectorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>