force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ParProvider__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParProvider__c</fullName>
    <label>Par Provider</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParProvider</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>