force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__PlaceOfServiceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlaceOfServiceId__c</fullName>
    <label>Place Of Service</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlaceOfServiceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>