force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ReconsiderationDenialNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReconsiderationDenialNotificationDate__c</fullName>
    <label>Reconsideration Denial Notification Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReconsiderationDenialNotificationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>