force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__rel_1716722507936_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722507936_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareRequest_MemberSecondaryPlanId_ma_rel</label>
    <referenceTo>ssot__MemberPlan__dlm</referenceTo>
    <relationshipLabel>CareRequest_MemberSecondaryPlanId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716722507936_end</relationshipName>
    <type>Lookup</type>
</CustomField>